tests/invalid/raise_non_str_message/main.py
def run_case() -> None:
    raise ValueError(42)

if __name__ == "__main__":
    run_case()
